cis-1-10/f5-demo-app-route-deployment-ssl.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-demo-app-route-reencrypt
  namespace: f5demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: f5-demo-app-route-reencrypt
    spec:
      containers:
      - env:
        image: f5devcentral/f5-demo-httpd
        name: f5-demo-app-route
        ports:
        - containerPort: 443
          protocol: TCP
        - containerPort: 80
          protocol: TCP
