cis-1-10/f5-demo-app-route-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-demo-app-route-basic
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: f5-demo-app-route-basic
    spec:
      containers:
      - name: f5-demo-app-route
        image: f5devcentral/f5-hello-world:develop
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-demo-app-route-health
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: f5-demo-app-route-health
    spec:
      containers:
      - name: f5-demo-app-route
        image: f5devcentral/f5-hello-world:develop
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-demo-app-route-balance
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: f5-demo-app-route-balance
    spec:
      containers:
      - name: f5-demo-app-route
        image: f5devcentral/f5-hello-world:develop
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-demo-app-route-ssl
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: f5-demo-app-route-ssl
    spec:
      containers:
      - name: f5-demo-app-route
        image: f5devcentral/f5-hello-world:develop
        ports:
        - containerPort: 8080
          protocol: TCP
