cis-1-10/f5-demo-app-route-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-basic
    labels:
        name: f5-demo-app-route-basic
    namespace: f5demo
spec:
    type: ClusterIP
    ports:
        -
            port: 8080
            targetPort: 8080
    selector:
        app: f5-demo-app-route-basic
---
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-balance
    labels:
        name: f5-demo-app-route-balance
    namespace: f5demo
spec:
    type: ClusterIP
    ports:
        -
            port: 8080
            targetPort: 8080
    selector:
        app: f5-demo-app-route-balance
---
apiVersion: v1
kind: Service
metadata:
    name: f5-demo-app-route-edge-ssl
    labels:
        name: f5-demo-app-route-edge-ssl
    namespace: f5demo
spec:
    type: ClusterIP
    ports:
        -
            port: 8080
            targetPort: 8080
    selector:
        app: f5-demo-app-route-edge-ssl
