cis-1-10/f5-demo-app-route-balance.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route-balance
    name: f5-demo-app-route-balance
    namespace: f5demo
    annotations:
      # Specify a supported BIG-IP load balancing mode
      # Change from the default balance to least-connections-node
      # health monitoring
      virtual-server.f5.com/balance: least-connections-node
      virtual-server.f5.com/health: |
        [
          {
            "path": "mysite.f5demo.com/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
  spec:
    host: mysite.f5demo.com
    path: "/balance"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: f5-demo-app-route-balance
