cis-1-10/f5-demo-app-route-health.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route-health
    name: f5-demo-app-route-health
    namespace: f5demo
    annotations:
      # Specify a supported BIG-IP load balancing mode
      # Create a health monitor
      virtual-server.f5.com/health: |
        [
          {
            "path": "mysite.f5demo.com/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
  spec:
    host: mysite.f5demo.com
    path: "/health"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: f5-demo-app-route-health
