cis-1-10/f5-demo-app-route-passthrough-ssl.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route-passthrough-ssl
    name: f5-demo-app-route-passthrough-ssl
    namespace: f5demo
    annotations:
      # annotations
  spec:
    host: mysite.f5demo.com
    # path: "/myApp"
    port:
      targetPort: 443
    tls:
      # insecureEdgeTerminationPolicy: Redirect
      termination: passthrough
    to:
      kind: Service
      name: f5-demo-app-route-passthrough-ssl
