cis-1-10/f5-demo-app-route-reencrypt-ssl.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route-reencrypt-ssl
    name: f5-demo-app-route-reencrypt-ssl
    namespace: f5demo
    annotations:
      # annotations
      # default clientssl profile
      # health monitoring
      virtual-server.f5.com/clientssl: /Common/clientssl
      virtual-server.f5.com/clientssl: /Common/serverssl
  spec:
    host: mysite.f5demo.com
    path: "/"
    port:
      targetPort: 443
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: f5-demo-app-route-reencrypt-ssl
