cis-1-10/f5-demo-app-route-ssl.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      name: f5-demo-app-route-ssl
    name: f5-demo-app-route-ssl
    namespace: f5demo
    annotations:
      # no annotations
      # Provided certs
      virtual-server.f5.com/clientssl: /Common/clientssl
  spec:
    host: mysite.f5demo.com
    path: "/"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: f5-demo-app-route-ssl
